--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
+    "openai": "^4.65.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
@@ -33,7 +34,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "npm run build && gh-pages -d build",
-    "generate": "node generatepdf.js"
+    "generate": "node generatepdf.js",
+    "ia": "node ia.js"
   },
   "eslintConfig": {
     "extends": [
