--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
     "openai": "^4.65.0",
@@ -34,8 +35,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "npm run build && gh-pages -d build",
-    "generate": "node generatepdf.js",
-    "ia": "node ia.js"
+    "cv": "node ./z-aide/CV/CVpdf.js",
+    "generate": "node ./z-aide/generate.js"
   },
   "eslintConfig": {
     "extends": [
